force-app/main/default/objects/LLC_BI__Requirement_Category__c/LLC_BI__Requirement_Category__c.object-meta.xml
<CustomObject>
    <description>The Requirement Category object configures categories for Smart Checklist.</description>
    <label>Requirement Category</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requirement Categories</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>