force-app/main/default/objects/LLC_BI__Requirement_Category__c/fields/LLC_BI__Context_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Context_Type__c</fullName>
    <description>The system automatically populates this field with a context object.</description>
    <inlineHelpText>The system automatically populates this field with a context object.</inlineHelpText>
    <label>Context Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>