force-app/main/default/objects/LLC_BI__Requirement_Category__c/fields/LLC_BI__Criteria__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Criteria__c</fullName>
    <description>The administrator populates this optional field with criteria that dictates if the Category displays or not.</description>
    <inlineHelpText>Populate this optional field with criteria that dictates if the Category displays or not.</inlineHelpText>
    <label>Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>