force-app/main/default/objects/LLC_BI__Requirement_Category__c/fields/LLC_BI__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>The administrator selects this field as true if the Category should be active. By default, it is true.</description>
    <inlineHelpText>Select this field as true if the category should be active.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>